// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Me Conversation concerning items doesnt return invalid items 1`] = `
Array [
  Object {
    "item": Object {
      "__typename": "Show",
      "isReference": true,
    },
    "title": "Catty Show",
  },
]
`;

exports[`Me Conversation concerning items returns the conversation items 1`] = `
Array [
  Object {
    "item": Object {
      "__typename": "Artwork",
      "isAcquireable": true,
    },
    "title": "Pwetty Cats",
  },
  Object {
    "item": Object {
      "__typename": "Show",
      "isReference": true,
    },
    "title": "Catty Show",
  },
]
`;

exports[`Me Conversation concerning unread indicator returns the right unread status 1`] = `
Object {
  "isLastMessageToUser": true,
  "lastMessageDeliveryID": "2",
  "unread": true,
}
`;

exports[`Me Conversation inquiry request returns the formatted first message as just the formatted questions if no message is present 1`] = `
"I would like to request the following information about this artwork:
• Condition & Provenance"
`;

exports[`Me Conversation inquiry request returns the formatted first message, questions, and shipping location when present 1`] = `
Array [
  Object {
    "internalID": "shipping_quote",
    "question": "Shipping",
  },
  Object {
    "internalID": "condition_and_provenance",
    "question": "Condition & Provenance",
  },
]
`;

exports[`Me Conversation inquiry request returns the formatted first message, questions, and shipping location when present 2`] = `
Object {
  "city": "New York City",
  "country": "US",
  "state": "NY",
}
`;

exports[`Me Conversation inquiry request returns the formatted first message, questions, and shipping location when present 3`] = `
"Hello world!,

I would like to request the following information about this artwork:
• Shipping Quote to New York City, US
• Condition & Provenance"
`;

exports[`Me Conversation returns a conversation 1`] = `
Object {
  "conversation": Object {
    "from": Object {
      "email": "collector@example.com",
    },
    "fromProfile": Object {
      "email": "collector@example.com",
    },
    "initialMessage": "Loved some of the works at your fair booth!",
    "internalID": "420",
    "lastMessage": "Loved some of the works at your fair booth!",
    "messages": Object {
      "edges": Array [
        Object {
          "node": Object {
            "body": "I'm a cat",
            "deliveries": null,
            "from": Object {
              "email": "fancy_german_person@posteo.de",
              "name": "Percy Z",
            },
            "internalID": "240",
            "invoice": null,
            "isFromUser": true,
            "isInvoice": true,
          },
        },
        Object {
          "node": Object {
            "body": "",
            "deliveries": null,
            "from": Object {
              "email": "postman@posteo.de",
              "name": "Bitty Z",
            },
            "internalID": "241",
            "invoice": null,
            "isFromUser": false,
            "isInvoice": false,
          },
        },
        Object {
          "node": Object {
            "body": null,
            "deliveries": null,
            "from": Object {
              "email": "fancy_german_person+wunderbar@posteo.de",
              "name": "Matt Z",
            },
            "internalID": "242",
            "invoice": null,
            "isFromUser": true,
            "isInvoice": false,
          },
        },
        Object {
          "node": Object {
            "body": null,
            "deliveries": Array [
              Object {
                "openedAt": "2020-12-31T12:00:00+00:00",
              },
            ],
            "from": Object {
              "email": "postman+wunderlich@posteo.de",
              "name": null,
            },
            "internalID": "243",
            "invoice": null,
            "isFromUser": false,
            "isInvoice": false,
          },
        },
      ],
    },
    "unread": true,
  },
}
`;
